[package]
name = "parslers-lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An implementation of staged-selective parser combinators in Rust"
repository = "https://github.com/JordanLloydHall/parslers"
homepage = "https://github.com/JordanLloydHall/parslers"
readme = "README.md"

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.26"
syn = { version = "*", features = ["extra-traits"] }
either = {version = "1.6.1"}
parslers-macro = { path = "../parslers-macro" }
anymap = { version = "0.12.1"}