[package]
name = "parslers-wacc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
parslers-lib = { path = "../parslers-lib" }
parslers-macro = { path = "../parslers-macro" }
parslers-json = { path = "../parslers-json" }
parslers-branflakes = { path = "../parslers-branflakes" }
fast-float = "0.2.0"

[dependencies]
lazy_static = "1.4.0"
nom = "7.1.0"
nom-supreme = "0.6.0"
rstest = "0.17.0"
parslers-macro = { path = "../parslers-macro" }
parslers-lib = { path = "../parslers-lib" }