[package]
name = "test-site"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An implementation of staged-selective parser combinators in Rust"
repository = "https://github.com/JordanLloydHall/parslers"
homepage = "https://github.com/JordanLloydHall/parslers"
readme = "README.md"

[build-dependencies]
syn = { version = "*", features = ["extra-traits"] }
parslers-lib = { path = "../parslers-lib" }
parslers-macro = { path = "../parslers-macro" }
parslers-json = { path = "../parslers-json" }
proc-macro2 = "*"


[dependencies]
parslers-macro = { path = "../parslers-macro" }
parslers-lib = { path = "../parslers-lib" }
either = "1.8.1"
syn = "*"
anymap = { version = "0.12.1"}
parslers-json = { path = "../parslers-json" }

